# Object-oriented-analysis-and-design-2

./: .gitignore
lab01/: README.md
lab01/DocGenerator/: SalesSystem.sln  run_all.bat
lab01/DocGenerator/SalesSystem.Api/: Program.cs  SalesSystem.Api.csproj  SalesSystem.Api.http
lab01/DocGenerator/SalesSystem.Api/Controllers/: DocumentsController.cs  FlatProcessor.cs  IDocumentProcessor.cs  PatternProcessor.cs
lab01/DocGenerator/SalesSystem.Api/Data/: customers.json  owner.json  suppliers.json
lab01/DocGenerator/SalesSystem.Core/: Class1.cs  SalesSystem.Core.csproj
lab01/DocGenerator/SalesSystem.Gui/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  SalesSystem.Gui.csproj
lab02/LogAnalyzer/: .gitignore  CMakeLists.txt  imgui.ini  lab02ooap.drawio  report.md
lab02/LogAnalyzer/include/: ILogEngine.hpp
lab02/LogAnalyzer/src/: main.cpp
lab02/LogAnalyzer/src/FlyweightEngine/: FlyweightEngine.cpp  FlyweightEngine.hpp
lab02/LogAnalyzer/src/NaiveEngine/: NaiveEngine.cpp  NaiveEngine.hpp
lab03/: README.md
lab03/smart_home.py/: main.py
lab03/smart_home.py/app/: application.py
lab03/smart_home.py/core/: command.py  device.py  history.py
lab03/smart_home.py/gui/: main_window.py  widgets.py
lab03/smart_home.py/no_command_impl/: app_direct.py  direct_main_window.py
lab04/src/: init.sql  pom.xml
lab04/src/database/: PostgresTransactionRepository.java
lab04/src/gui/: BankingApp.java
lab04/src/scoring/: BadCreditCalculator.java  CreditCalculator.java  Transaction.java  TransactionRepository.java
(+30 files in other folders)
